Fixes to missing descriptions, anonymous types and adding rules for descriptive descriptions and anonymous schemas in parameters

--- a/AutoRest/AutoRest.Core/Properties/Resources.resx
+++ b/AutoRest/AutoRest.Core/Properties/Resources.resx
@@ -252,4 +252,7 @@
   <data name="XMSPathBaseNotInPaths" xml:space="preserve">
     <value>The path '{0}' in x-ms-paths does not overload a normal path in the paths section.</value>
   </data>
+  <data name="DescriptionNotDescriptive" xml:space="preserve">
+    <value>The value provided for description is not descriptive enough.</value>
+  </data>
 </root>
