--- a/AutoRest/AutoRest.Core/Properties/Resources.resx
+++ b/AutoRest/AutoRest.Core/Properties/Resources.resx
@@ -235,7 +235,7 @@
     <value>Currently, only JSON-based response payloads are supported, so '{0}' won't work.</value>
   </data>
   <data name="OnlyOneUnderscoreAllowedInOperationId" xml:space="preserve">
-    <value>Only 1 underscore is permitted in the operation id.</value>
+    <value>Only 1 underscore is permitted in the operation id, following Noun_Verb conventions.</value>
   </data>
   <data name="OperationIdMissing" xml:space="preserve">
     <value>OperationId is required for all operations. Please add it for '{0}' operation of '{1}' path.</value>
@@ -254,5 +254,8 @@
   </data>
   <data name="DescriptionNotDescriptive" xml:space="preserve">
     <value>The value provided for description is not descriptive enough.</value>
+  </data>
+  <data name="OperationIdNounInVerb" xml:space="preserve">
+    <value>Per the Noun_Verb convention for Operation Ids, the noun '{0}' should not appear after the underscore.</value>
   </data>
 </root>
